# Endian

./: .pypirc  README.md  setup.cfg  setup.py
backup/: Endian-0.0.2-py3-none-any.whl  Endian-0.0.3-py3-none-any.whl
src/Endian/: endian.py
src/Endian.egg-info/: PKG-INFO  SOURCES.txt
tests/test/: test_endian.py
tests/test/src/: endian.py
