[metadata]
name = endian
version = 0.0.4
author = kunal hedaoo
author_email = kunalhedaoo25@gmail.com
description = short package description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kunaldesign/Endian 
project_urls =
    Bug Tracker = https://github.com/kunaldesign/Endian/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src